# rsnltk

./: Cargo.toml  README.md
experiments/rsnltk-experiment/: Cargo.toml  README.md
experiments/rsnltk-experiment/examples/: json_test.rs
experiments/rsnltk-experiment/examples/data/: classes.txt
experiments/rsnltk-experiment/examples/how_to_solve_moved_data/: test.rs  test1.rs  test3.rs
experiments/rsnltk-experiment/examples/test/: test1.rs
experiments/rsnltk-experiment/src/: main.rs  wordnet.rs
experiments/rsnltk-experiment/src/native/: mod.rs  segmentation.rs  summarizer.rs  text.rs  token.rs  word2vec.rs
experiments/rsnltk-experiment/src/native/nlpsvc/: annotated_document.rs  english_rules.rs  mod.rs  node_label.rs  readme.rs  regex_tokenizer.rs  text_source.rs  tree_sequence.rs
experiments/rsnltk-experiment/src/native/nlpsvc/regex/: mod.rs  reinterp.rs  reparse.rs  reprog.rs  reterm.rs  retrans.rs  sparse.rs  util.rs
experiments/rsnltk-experiment/tests/: nlpsvc_test.rs  segmentation_test.rs  text_test.rs
src/: lib.rs  stanza.rs  wordnet.rs
src/api/: mod.rs  natural.rs  whatlang.rs  yn.rs
src/native/: chardata.rs  segmentation.rs  toksiter.rs  word2vec.rs
tests/: 3rdparty_test.rs  native_rust_test.rs  segmentation_test.rs  stanza_test.rs  wordnet_test.rs
