[[bin]]
name="rsnltk_main"
path="src/main.rs"

[package]
name = "rsnltk"
version = "0.1.0"
edition = "2021"
description = "Rust-based Natural Language Toolkit using Python Bindings"
readme = "README.md"
repository = "https://github.com/dhchenx/rsnltk/"
documentation = "https://docs.rs/crate/rsnltk/latest"
license = "MIT"
keywords = [ "nltk", "Stanza","CoreNLP","text-analysis","semantics"]
categories = ["filesystem"]
exclude=[
    "data",
    ".idea",
    "target"
]

[lib]
crate-type=["cdylib","rlib"]
name="rsnltk"
path= "src/lib.rs"

[dependencies]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.pyo3]
version = "0.15.1"
features = ["auto-initialize"]
